--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="uk">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Food</title>
 
-    <link href="../../images/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
-    <link href="../../images/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../../images/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="../../images/icons/favicon/site.webmanifest" rel="manifest" />
-    <link href="../../images/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
+    <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
+    <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest" />
+    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
     
     <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
@@ -18,22 +18,23 @@
 
 <body>
     <div class="wrapper">
+
         <header class="header" id="header">
     <div class="container">
 
         <nav class="menu">
 
             <a class="logo header__logo" href="#hero">
-                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                <img class="logo__img" src="./assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a class="menu__link menu__link--active" href="../../index.html">Головна</a>
+                    <a class="menu__link menu__link--active" href="./index.html">Головна</a>
                 </li>
 
                 <li class="menu__item">
-                    <a class="menu__link" href="../../catalog.html">Страви</a>
+                    <a class="menu__link" href="./catalog.html">Страви</a>
                 </li>
 
                 <li class="menu__item">
@@ -152,11 +153,13 @@
         </nav>
     </div>
 </header>
+
         <main class="main">
+
             <section class="hero section" id="hero">
     <div class="container">
 
-        <div class="hero__inner" style="background-image: url('../images/hero/guy@1x.webp');">
+        <div class="hero__inner" style="background-image: url('../assets/images/hero/guy@1x.webp');"> 
 
             <div class="hero__content">
 
@@ -234,7 +237,7 @@
     <li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -243,7 +246,7 @@
 </li><li class="product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -252,7 +255,7 @@
 </li><li class="product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -261,7 +264,7 @@
 </li><li class="product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -270,7 +273,7 @@
 </li><li class="product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -279,7 +282,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -288,7 +291,7 @@
 </li><li class="product-list__item" data-category="dishes">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -297,7 +300,7 @@
 </li><li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -306,7 +309,7 @@
 </li><li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -315,7 +318,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="#">
-            <img class="product-card__img" src="../../images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -334,7 +337,7 @@
 </section>
             <section class="features section" id="features">
     <div class="container">
-        <div class="features__inner" style="background-image: url('../../images/features/food_delivery@1x.webp')">
+        <div class="features__inner" style="background-image: url('../assets/images/features/food_delivery@1x.webp')">
 
             <div class="features__content">
 
@@ -385,7 +388,7 @@
                 <li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Blaze Pizza</span>
@@ -400,7 +403,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Pizza Runcho</span>
@@ -415,7 +418,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Pizza Hut</span>
@@ -430,7 +433,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_4@2x.webp" alt="Гамбургер Макдональдз" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_4@2x.webp" alt="Гамбургер Макдональдз" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">McDonald`s</span>
@@ -445,7 +448,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_5@2x.webp" alt="Картопля фрі з КФС" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_5@2x.webp" alt="Картопля фрі з КФС" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">KFC</span>
@@ -460,7 +463,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../../images/restaurant/resto_6@2x.webp" alt="зображення Стар Бургеру" width="370" height="300">
+            <img class="rest-card__img" src="../assets/images/restaurant/resto_6@2x.webp" alt="зображення Стар Бургеру" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Star Burgers</span>
@@ -497,7 +500,7 @@
                 <ul class="swiper-wrapper review-slider__wrapper review__list">
 
                     <li class="swiper-slide review-card">
-    <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
+    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
     <blockquote class="review-card__blockquote">
@@ -516,7 +519,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
+    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
     <blockquote class="review-card__blockquote">
@@ -535,7 +538,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
+    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
     <blockquote class="review-card__blockquote">
@@ -554,7 +557,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../../images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
+    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером"
         srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
         sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
     <blockquote class="review-card__blockquote">
@@ -594,7 +597,7 @@
 </section>
             <section class="application section" id="application">
     <div class="container">
-        <div class="application__inner" style="background-image: url('../../images/application/get_app@1x.webp')">
+        <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
 
             <div class="application__box">
 
@@ -622,8 +625,11 @@
         </div>
     </div>
 </section>
+
         </main>
+
     </div>
+
     <footer class="footer" id="footer">
     <div class="container">
 
@@ -632,7 +638,7 @@
             <div class="footer__box">
 
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                    <img class="logo__img" src="./assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">  
                 </a>
 
                 <form class="form" action="#">
