--- a/src/modules/pages/main/hero/_hero.html
+++ b/src/modules/pages/main/hero/_hero.html
@@ -1,7 +1,7 @@
 <section class="hero section" id="hero">
     <div class="container">
 
-        <div class="hero__inner" style="background-image: url('../images/hero/guy@1x.webp');">
+        <div class="hero__inner" style="background-image: url('../assets/images/hero/guy@1x.webp');"> 
 
             <div class="hero__content">
 
