--- a/src/modules/pages/main/restaurant/_restaurant.html
+++ b/src/modules/pages/main/restaurant/_restaurant.html
@@ -8,7 +8,7 @@
 
             <ul class="swiper-wrapper restaurant-slider__wrapper restaurant__list">
 
-                @loop('../restcard/_restcard.html', './mainPage/restaurant/_restaurant.json')
+                @loop('../../../components/cards/rest-card/_rest-card.html', '../modules/components/cards/rest-card/rest-card.json')
 
             </ul>
 
