--- a/src/modules/catalog.html
+++ b/src/modules/catalog.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="uk">
 
-@include('./head/_head.html')
+@include('./components/head/_head.html')
 
 <body>
 
     <div class="wrapper">
-        @include('./mainPage/header/_header.html')
+        
+        @include('./components/header/_header.html')
 
-        @include('./breadcrumbs/_breadcrumbs.html')
+        @include('./components/breadcrumbs/_breadcrumbs.html')
 
         <main class="main">
 
-                @include('./catalogPage/_catalog.html')
+                @include('./pages/catalog/_catalog.html')
 
-                @include('./mainPage/application/_application.html')
+                @include('./pages/main/application/_application.html')
 
-                @include('./catalogPage/Promo/_Promo.html')
+                @include('./pages/catalog/catalog-promo/_catalog-promo.html')
 
         </main>
 
     </div>
 
-    @include('./mainPage/footer/_footer.html')
+    @include('./components/footer/_footer.html')
 
-    @include('./scripts/_scripts.html')
+    @include('./components/scripts/_scripts.html')
 
 </body>
 
