--- a/src/modules/index.html
+++ b/src/modules/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="uk">
-    @include('./head/_head.html')
+@include('./components/head/_head.html')
 
 <body>
     <div class="wrapper">
-        @include('./mainPage/header/_header.html')
-        <main class="main">
-            @include('./mainPage/hero/_hero.html')
-            @include('./mainPage/categories/_categories.html')
-            @include('./mainPage/features/_features.html')
-            @include('./mainPage/restaurant/_restaurant.html')
-            @include('./mainPage/review/_review.html')
-            @include('./mainPage/application/_application.html')
-        </main>
-    </div>
-    @include('./mainPage/footer/_footer.html')
 
-    @include('./scripts/_scripts.html')
+        @include('./components/header/_header.html')
+
+        <main class="main">
+
+            @include('./pages/main/hero/_hero.html')
+            @include('./pages/main/categories/_categories.html')
+            @include('./pages/main/features/_features.html')
+            @include('./pages/main/restaurant/_restaurant.html')
+            @include('./pages/main/review/_review.html')
+            @include('./pages/main/application/_application.html')
+
+        </main>
+
+    </div>
+
+    @include('./components/footer/_footer.html')
+
+    @include('./components/scripts/_scripts.html')
 
 </body>
 
