--- a/src/modules/pages/main/review/_review.html
+++ b/src/modules/pages/main/review/_review.html
@@ -10,7 +10,7 @@
 
                 <ul class="swiper-wrapper review-slider__wrapper review__list">
 
-                    @loop('../reviewCard/_reviewCard.html', './mainPage/review/_reviews.json')
+                    @loop('../../../components/cards/review-card/_review-card.html', '../modules/components/cards/review-card/review-card.json')
 
                 </ul>
 
